--- a/backend/config.json
+++ b/backend/config.json
@@ -1,3 +1,3 @@
 {
-    "connectionString": "mongodb+srv://testuser:testuser1234@easynotes.x7u0d.mongodb.net/?retryWrites=true&w=majority&appName=EasyNotes"
+    "connectionString": "Add_you_Own_Connection_String"
 }
